// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Heading should not render anything if no children are provided 1`] = `<div />`;

exports[`Heading should render custom render if options provided with heading 1`] = `
<div>
  <div>
    <span>
      Custom Heading - 
      {"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}],"direction":null,"format":"","indent":0,"type":"heading","version":1,"tag":"h1"}
    </span>
    heading text
  </div>
</div>
`;

exports[`Heading should render default h1 if no options provided 1`] = `
<div>
  <h1>
    heading text
  </h1>
</div>
`;

exports[`Heading should render default h1 if options provided without heading 1`] = `
<div>
  <h1>
    heading text
  </h1>
</div>
`;

exports[`Heading should render default h2 if no options provided 1`] = `
<div>
  <h2>
    heading text
  </h2>
</div>
`;

exports[`Heading should render default h2 if options provided without heading 1`] = `
<div>
  <h2>
    heading text
  </h2>
</div>
`;

exports[`Heading should render default h3 if no options provided 1`] = `
<div>
  <h3>
    heading text
  </h3>
</div>
`;

exports[`Heading should render default h3 if options provided without heading 1`] = `
<div>
  <h3>
    heading text
  </h3>
</div>
`;

exports[`Heading should render default h4 if no options provided 1`] = `
<div>
  <h4>
    heading text
  </h4>
</div>
`;

exports[`Heading should render default h4 if options provided without heading 1`] = `
<div>
  <h4>
    heading text
  </h4>
</div>
`;

exports[`Heading should render default h5 if no options provided 1`] = `
<div>
  <h5>
    heading text
  </h5>
</div>
`;

exports[`Heading should render default h5 if options provided without heading 1`] = `
<div>
  <h5>
    heading text
  </h5>
</div>
`;

exports[`Heading should render default h6 if no options provided 1`] = `
<div>
  <h6>
    heading text
  </h6>
</div>
`;

exports[`Heading should render default h6 if options provided without heading 1`] = `
<div>
  <h6>
    heading text
  </h6>
</div>
`;
